Sat Dec  4 20:39:20 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * THANKS: Added the 1,900th contributor to the THANKS file!!

Sun Dec  5 14:49:57 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/TP_Reactor_Test.cpp:

	  The test creates some listeners in the one button test, if that
	  exceeds SOMAXCONN the test fails. We now reset the number of
	  senders in the test to SOMAXCONN if they exceed
	  SOMAXCONN. Thanks to Frare Steven <stevefr at avaya dot com> for
	  the patch. 

Fri Dec  3 07:37:38 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* MakeProjectCreator/config/dsnotifylogadmin_serv.mpb:

	  Changed to inherit from notification_serv.

Fri Dec 3 12:54:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * ace/config-vxworks5.x.h:
          Added _GLIBCPP_USE_LONG_LONG for GCC 3.3+ since it is not defined
          by the compiler itself. This solves problems with long long support
	  in standard C++ includes.

Fri Dec  3 11:50:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timeprobe_T.cpp:
          Fixed casing in include

Thu Dec  2 13:38:33 2004  Chad Elliott  <elliott_c@ociweb.com>

        * apps/soreduce/Library.h:
        * apps/soreduce/Library.cpp:
        * apps/soreduce/README:

          Modified soreduce to output mpc files instead of makefiles.

Thu Dec  2 11:09:07 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * apps/gperf/tests/Makefile.am:

          Revert my previous change.  Fixed orignal problem by putting the
          stamp file in the same directory as the output file.  Thanks to
          Chad Elliott for letting me know that the gperf options for the
          two invocations of gperf on idl.gperf were different.

Thu Dec 2 16:42:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:
          Added explicit 'signed-char' flags for ppc and arm builds.

Thu Dec  2 11:08:29 2004  Steve Huston  <shuston@riverace.com>
