@@ -1203,10 +1203,14 @@ ACE_Select_Reactor_T<ACE_SELECT_REACTOR_TOKEN>::dispatch_notification_handlers
   int n =
     this->notify_handler_->dispatch_notifications (number_of_active_handles,
                                                    dispatch_set.rd_mask_);
+
   if (n == -1)
     return -1;
   else
-    number_of_handlers_dispatched += n;
+    {
+      number_of_handlers_dispatched += n;
+      number_of_active_handles -= n;
+    }
 
   // Same as dispatch_timer_handlers
   // No need to do anything with the state changed. That is because
